<resources>
    <string name="app_name">boteFMC</string>
    <string name="volver_txt">VOLVER</string>
    <string name="añadir_txt">AÑADIR</string>
    <string name="insertar_txt">INSERTAR</string>
    <string name="insertar_actividad_txt">INSERTAR ACTIVIDAD</string>
    <string name="ver_actividad_txt">VER ACTIVIDADES</string>
    <string name="bote_txt">BOTE</string>
    <string name="ver_participantes_txt">VER PARTICIPANTES</string>
    <string name="actividad_txt">Actividad</string>
    <string name="pagador_txt">Pagado por:</string>
    <string name="precio_txt">Euros:</string>
    <string name="ver_ajustes_txt">AJUSTES</string>
    <string name="titulo_bote_txt">RESULTADO BOTE</string>
    <string name="titulo_actividad_txt">ACTIVIDADES</string>
    <string name="titulo_participante_txt">PARTICIPANTES</string>
    <string name="titulo_participante_nuevo_txt">PARTICIPANTE NUEVO</string>
    <string name="salir_txt">SALIR</string>
    <string name="on_txt">ON</string>
    <string name="off_txt">OFF</string>
    <string name="modoDemo_txt">MODO  DEMO</string>
    <string name="debug_txt">MODO DEBUG</string>
    <string name="reset_txt">MODO RESET</string>
    <string name="aplicar_txt">APLICAR</string>

</resources>
