<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.masteraaa.botefmc.MainActivity">

    <ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
        android:id="@+id/imgModoDemolym"
    android:src="@drawable/mododemo"
    android:layout_marginLeft="250dp"
    android:visibility="invisible"
        />
    <!--android:visibility="invisible"-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBotelym"
        android:text="@string/bote_txt"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnParticipanteslym"
        android:text="@string/ver_participantes_txt"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnActividadlym"
        android:text="@string/ver_actividad_txt"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAjusteslym"
        android:text="@string/ver_ajustes_txt"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSalirlym"
        android:text="@string/salir_txt"
        />
</LinearLayout>
