<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.masteraaa.botefmc.Ajustes">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblTituloAjusteslyaj"
        android:text="@string/ver_ajustes_txt"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@drawable/separador"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/separador1lyaj"
        android:layout_below="@id/lblTituloAjusteslyaj"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblModoDemolyaj"
        android:text="@string/modoDemo_txt"
        android:layout_below="@id/separador1lyaj"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />
    <Switch android:id="@+id/BtnSwitchDemolyaj"
        android:textOn="@string/on_txt"
        android:textOff="@string/off_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lblModoDemolyaj"
        android:layout_alignBaseline="@id/lblModoDemolyaj"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblDebuglyaj"
        android:text="@string/debug_txt"
        android:layout_below="@id/lblModoDemolyaj"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />
    <Switch android:id="@+id/BtnSwitchDebuglyaj"
        android:textOn="@string/on_txt"
        android:textOff="@string/off_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lblDebuglyaj"
        android:layout_alignBaseline="@id/lblDebuglyaj"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblResetlyaj"
        android:text="@string/reset_txt"
        android:layout_below="@id/lblDebuglyaj"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />
    <Switch android:id="@+id/BtnSwitchResetlyaj"
        android:textOn="@string/on_txt"
        android:textOff="@string/off_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lblResetlyaj"
        android:layout_alignBaseline="@id/lblResetlyaj"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@drawable/separador"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/separador2lyaj"
        android:layout_below="@id/lblResetlyaj"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnVolverlyaj"
        android:text="@string/volver_txt"
        android:layout_below="@id/separador2lyaj"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAplicarlyaj"
        android:text="@string/aplicar_txt"
        android:layout_below="@id/separador2lyaj"
        android:layout_toRightOf="@id/btnVolverlyaj"
        android:layout_alignBaseline="@id/btnVolverlyaj"

        />
</RelativeLayout>
