<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.masteraaa.botefmc.Participantes"
    android:weightSum="1">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imgModoDemolyp"
        android:layout_marginLeft="250dp"
        android:src="@drawable/mododemo"
        android:visibility="invisible"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblTitulolyp"
        android:text="@string/titulo_actividad_txt"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@drawable/separador"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/separador1lyp"
        android:layout_below="@id/lblTitulolyp"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lisParticipanteslyp"
        android:layout_weight="0.54"
        android:layout_below="@id/separador1lyp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/separadorParticipanteslyp"
        android:layout_below="@id/lisParticipanteslyp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNuevolyp"
        android:text="Nuevo:"
        android:layout_below="@id/separadorParticipanteslyp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ediNuevolyp"
        android:layout_below="@id/txtNuevolyp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAnyadirlyp"
        android:text="@string/añadir_txt"
        android:layout_below="@id/ediNuevolyp"
        />

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnVolverlyp"
        android:text="@string/volver_txt"
          android:layout_toRightOf="@id/btnAnyadirlyp"
          android:layout_below="@id/ediNuevolyp"
        />
</RelativeLayout>
